custom markers, one infoWindow, z-index fixes

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
       html, body { height: 100%; margin: 0; padding: 0;}
-      #app-container {height: 100%; width: 100% position: absolute;}
-      #map-canvas { height: 100%; width: 100%; margin: 0; padding: 0; z-index: 1; position: absolute;}
-    #images { height: 50%; margin: 0; padding: 0;z-index: 3;}
+      #app-container {height: 100%; width: 100%}
+      #map-canvas { height: 100%; width: 100%; left: 0px; top: 0px; margin: 0; padding: 0; position: absolute; z-index: 1;}
+    #images { height: 50%; margin: 0; padding: 0;}
+        #search-box {position: absolute; z-index: 300; top: 20px; left: 50px;}
+    #search-button {position: relative; z-index: 300;}
 
-      .place-list {height: 50%; width: 20%; z-index: 2; position: absolute;}
+      .place-list {height: 40%; width: 20%; float: right; position: absolute; top: 5px; right: 5px; z-index: 200; overflow-y: scroll;}
       .place-list-item {
         border: 1px solid red;
-        cursor: pointer;}
+        cursor: pointer;
+        }
